fixed all dem colours

--- a/rainbow.css
+++ b/rainbow.css
@@ -32,7 +32,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="cyan"], *:root:root:root a[href][data-colour|="cyan"]:hover, *:root:root:root *.colour-link[data-colour|="cyan"]:hover {
-    background-color: #c258f2;
+    background-color: #31b9db;
 }
 
 *:root:root:root *[data-colour|="blue"] {
@@ -40,7 +40,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="blue"], *:root:root:root a[href][data-colour|="blue"]:hover, *:root:root:root *.colour-link[data-colour|="blue"]:hover {
-    background-color: #c258f2;
+    background-color: #7476fc;
 }
 
 *:root:root:root *[data-colour|="purple"] {
@@ -56,7 +56,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="magenta"], *:root:root:root a[href][data-colour|="magenta"]:hover, *:root:root:root *.colour-link[data-colour|="magenta"]:hover {
-    background-color: #c258f2;
+    background-color: #e63ca4;
 }
 
 *:root:root:root *[data-colour|="red"] {
@@ -64,7 +64,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="red"], *:root:root:root a[href][data-colour|="red"]:hover, *:root:root:root *.colour-link[data-colour|="red"]:hover {
-    background-color: #c258f2;
+    background-color: #e83f2c;
 }
 
 *:root:root:root *[data-colour|="yellow"] {
@@ -72,7 +72,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="yellow"], *:root:root:root a[href][data-colour|="yellow"]:hover, *:root:root:root *.colour-link[data-colour|="yellow"]:hover {
-    background-color: #c258f2;
+    background-color: #f6d037;
 }
 
 *:root:root:root *[data-colour|="green"] {
@@ -80,7 +80,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="green"], *:root:root:root a[href][data-colour|="green"]:hover, *:root:root:root *.colour-link[data-colour|="green"]:hover {
-    background-color: #c258f2;
+    background-color: #6ad622;
 }
 
 *:root:root:root *[data-colour|="teal"] {
@@ -88,7 +88,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="teal"], *:root:root:root a[href][data-colour|="teal"]:hover, *:root:root:root *.colour-link[data-colour|="teal"]:hover {
-    background-color: #c258f2;
+    background-color: #49cfa2;
 }
 
 *:root:root:root *[data-colour|="cyan-light"] {
@@ -96,7 +96,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="cyan-light"], *:root:root:root a[href][data-colour|="cyan-light"]:hover, *:root:root:root *.colour-link[data-colour|="cyan-light"]:hover {
-    background-color: #c258f2;
+    background-color: #bfe7f2;
 }
 
 *:root:root:root *[data-colour|="blue-light"] {
@@ -104,7 +104,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="blue-light"], *:root:root:root a[href][data-colour|="blue-light"]:hover, *:root:root:root *.colour-link[data-colour|="blue-light"]:hover {
-    background-color: #c258f2;
+    background-color: #d0d1f6;
 }
 
 *:root:root:root *[data-colour|="purple-light"] {
@@ -112,7 +112,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="purple-light"], *:root:root:root a[href][data-colour|="purple-light"]:hover, *:root:root:root *.colour-link[data-colour|="purple-light"]:hover {
-    background-color: #c258f2;
+    background-color: #eabdff;
 }
 
 *:root:root:root *[data-colour|="magenta-light"] {
@@ -120,7 +120,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="magenta-light"], *:root:root:root a[href][data-colour|="magenta-light"]:hover, *:root:root:root *.colour-link[data-colour|="magenta-light"]:hover {
-    background-color: #c258f2;
+    background-color: #f0b2d8;
 }
 
 *:root:root:root *[data-colour|="red-light"] {
@@ -128,7 +128,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="red-light"], *:root:root:root a[href][data-colour|="red-light"]:hover, *:root:root:root *.colour-link[data-colour|="red-light"]:hover {
-    background-color: #c258f2;
+    background-color: #f9a59b;
 }
 
 *:root:root:root *[data-colour|="yellow-light"] {
@@ -136,7 +136,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="yellow-light"], *:root:root:root a[href][data-colour|="yellow-light"]:hover, *:root:root:root *.colour-link[data-colour|="yellow-light"]:hover {
-    background-color: #c258f2;
+    background-color: #fcf0be;
 }
 
 *:root:root:root *[data-colour|="green-light"] {
@@ -144,7 +144,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="green-light"], *:root:root:root a[href][data-colour|="green-light"]:hover, *:root:root:root *.colour-link[data-colour|="green-light"]:hover {
-    background-color: #c258f2;
+    background-color: #d5fcbb;
 }
 
 *:root:root:root *[data-colour|="teal-light"] {
@@ -152,7 +152,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="teal-light"], *:root:root:root a[href][data-colour|="teal-light"]:hover, *:root:root:root *.colour-link[data-colour|="teal-light"]:hover {
-    background-color: #c258f2;
+    background-color: #bdf0df;
 }
 
 *:root:root:root *[data-colour|="cyan-dark"] {
@@ -160,7 +160,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="cyan-dark"], *:root:root:root a[href][data-colour|="cyan-dark"]:hover, *:root:root:root *.colour-link[data-colour|="cyan-dark"]:hover {
-    background-color: #c258f2;
+    background-color: #00495c;
 }
 
 *:root:root:root *[data-colour|="blue-dark"] {
@@ -168,7 +168,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="blue-dark"], *:root:root:root a[href][data-colour|="blue-dark"]:hover, *:root:root:root *.colour-link[data-colour|="blue-dark"]:hover {
-    background-color: #c258f2;
+    background-color: #383966;
 }
 
 *:root:root:root *[data-colour|="purple-dark"] {
@@ -176,7 +176,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="purple-dark"], *:root:root:root a[href][data-colour|="purple-dark"]:hover, *:root:root:root *.colour-link[data-colour|="purple-dark"]:hover {
-    background-color: #c258f2;
+    background-color: #4c3159;
 }
 
 *:root:root:root *[data-colour|="magenta-dark"] {
@@ -184,7 +184,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="magenta-dark"], *:root:root:root a[href][data-colour|="magenta-dark"]:hover, *:root:root:root *.colour-link[data-colour|="magenta-dark"]:hover {
-    background-color: #c258f2;
+    background-color: #592846;
 }
 
 *:root:root:root *[data-colour|="red-dark"] {
@@ -192,7 +192,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="red-dark"], *:root:root:root a[href][data-colour|="red-dark"]:hover, *:root:root:root *.colour-link[data-colour|="red-dark"]:hover {
-    background-color: #c258f2;
+    background-color: #5d2721;
 }
 
 *:root:root:root *[data-colour|="yellow-dark"] {
@@ -200,7 +200,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="yellow-dark"], *:root:root:root a[href][data-colour|="yellow-dark"]:hover, *:root:root:root *.colour-link[data-colour|="yellow-dark"]:hover {
-    background-color: #c258f2;
+    background-color: #4f420d;
 }
 
 *:root:root:root *[data-colour|="green-dark"] {
@@ -208,7 +208,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="green-dark"], *:root:root:root a[href][data-colour|="green-dark"]:hover, *:root:root:root *.colour-link[data-colour|="green-dark"]:hover {
-    background-color: #c258f2;
+    background-color: #1f4505;
 }
 
 *:root:root:root *[data-colour|="teal-dark"] {
@@ -216,7 +216,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="teal-dark"], *:root:root:root a[href][data-colour|="teal-dark"]:hover, *:root:root:root *.colour-link[data-colour|="teal-dark"]:hover {
-    background-color: #c258f2;
+    background-color: #1c4b3b;
 }
 
 *:root:root:root *[data-colour|="white"] {
@@ -224,7 +224,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="white"], *:root:root:root a[href][data-colour|="white"]:hover, *:root:root:root *.colour-link[data-colour|="white"]:hover {
-    background-color: #c258f2;
+    background-color: #f5f5f5;
 }
 
 *:root:root:root *[data-colour|="bright"] {
@@ -232,7 +232,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="bright"], *:root:root:root a[href][data-colour|="bright"]:hover, *:root:root:root *.colour-link[data-colour|="bright"]:hover {
-    background-color: #c258f2;
+    background-color: #cccccc;
 }
 
 *:root:root:root *[data-colour|="light"] {
@@ -240,7 +240,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="light"], *:root:root:root a[href][data-colour|="light"]:hover, *:root:root:root *.colour-link[data-colour|="light"]:hover {
-    background-color: #c258f2;
+    background-color: #a3a3a3;
 }
 
 *:root:root:root *[data-colour|="medium"] {
@@ -248,7 +248,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="medium"], *:root:root:root a[href][data-colour|="medium"]:hover, *:root:root:root *.colour-link[data-colour|="medium"]:hover {
-    background-color: #c258f2;
+    background-color: #828282;
 }
 
 *:root:root:root *[data-colour|="regular"] {
@@ -256,7 +256,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="regular"], *:root:root:root a[href][data-colour|="regular"]:hover, *:root:root:root *.colour-link[data-colour|="regular"]:hover {
-    background-color: #c258f2;
+    background-color: #636363;
 }
 
 *:root:root:root *[data-colour|="dark"] {
@@ -264,7 +264,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="dark"], *:root:root:root a[href][data-colour|="dark"]:hover, *:root:root:root *.colour-link[data-colour|="dark"]:hover {
-    background-color: #c258f2;
+    background-color: #3b3b3b;
 }
 
 *:root:root:root *[data-colour|="dim"] {
@@ -272,7 +272,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="dim"], *:root:root:root a[href][data-colour|="dim"]:hover, *:root:root:root *.colour-link[data-colour|="dim"]:hover {
-    background-color: #c258f2;
+    background-color: #1c1c1c;
 }
 
 *:root:root:root *[data-colour|="black"] {
@@ -280,7 +280,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="black"], *:root:root:root a[href][data-colour|="black"]:hover, *:root:root:root *.colour-link[data-colour|="black"]:hover {
-    background-color: #c258f2;
+    background-color: #0c0c0c;
 }
 
 *:root:root:root *[data-colour|="transparent"] {
@@ -288,7 +288,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="transparent"], *:root:root:root a[href][data-colour|="transparent"]:hover, *:root:root:root *.colour-link[data-colour|="transparent"]:hover {
-    background-color: #c258f2;
+    background-color: transparent;
 }
 
 *:root:root:root *[data-colour|="inherit"] {
@@ -296,7 +296,7 @@ a[href]:hover {
 }
 
 *:root:root:root mark[data-colour|="inherit"], *:root:root:root a[href][data-colour|="inherit"]:hover, *:root:root:root *.colour-link[data-colour|="inherit"]:hover {
-    background-color: #c258f2;
+    background-color: inherit;
 }
 
 *:root:root:root *[data-colour-background|="cyan"] {
