y'know i think selection deserves more

--- a/rainbow.css
+++ b/rainbow.css
@@ -12,7 +12,7 @@
     color: inherit;
 }
 
-*:root:root:root a[href]:hover *::selection, *:root:root:root *[data-colour] *:not(a):not([data-colour])::selection, *:root:root:root *[data-colour] a:not([href]):not([data-colour])::selection, *:root:root:root *[data-colour] a[href]:not(:hover):not([data-colour])::selection {
+*:root:root:root a[href]:hover *::selection, *:root:root:root *[data-colour] *:not([data-colour])::selection {
     background-color: inherit;
 }
 
