--- a/rainbow.css
+++ b/rainbow.css
@@ -31,6 +31,144 @@ a[href]:hover {
     text-decoration-color: transparent;
 }
 
+/*  ACCENT  */
+
+*:root:root[data-colour-accent|="cyan"] dfn, *:root:root[data-colour-accent|="cyan"] time, *:root:root[data-colour-accent|="cyan"] u, *:root:root[data-colour-accent|="cyan"] *.colour-accent {
+    color: #31b9db;
+}
+
+*:root:root[data-colour-accent|="blue"] dfn, *:root:root[data-colour-accent|="blue"] time, *:root:root[data-colour-accent|="blue"] u, *:root:root[data-colour-accent|="blue"] *.colour-accent {
+    color: #7476fc;
+}
+
+*:root:root[data-colour-accent|="purple"] dfn, *:root:root[data-colour-accent|="purple"] time, *:root:root[data-colour-accent|="purple"] u, *:root:root[data-colour-accent|="purple"] *.colour-accent {
+    color: #c258f2;
+}
+
+*:root:root[data-colour-accent|="magenta"] dfn, *:root:root[data-colour-accent|="magenta"] time, *:root:root[data-colour-accent|="magenta"] u, *:root:root[data-colour-accent|="magenta"] *.colour-accent {
+    color: #e63ca4;
+}
+
+*:root:root[data-colour-accent|="red"] dfn, *:root:root[data-colour-accent|="red"] time, *:root:root[data-colour-accent|="red"] u, *:root:root[data-colour-accent|="red"] *.colour-accent {
+    color: #e83f2c;
+}
+
+*:root:root[data-colour-accent|="yellow"] dfn, *:root:root[data-colour-accent|="yellow"] time, *:root:root[data-colour-accent|="yellow"] u, *:root:root[data-colour-accent|="yellow"] *.colour-accent {
+    color: #f6d037;
+}
+
+*:root:root[data-colour-accent|="green"] dfn, *:root:root[data-colour-accent|="green"] time, *:root:root[data-colour-accent|="green"] u, *:root:root[data-colour-accent|="green"] *.colour-accent {
+    color: #6ad622;
+}
+
+*:root:root[data-colour-accent|="teal"] dfn, *:root:root[data-colour-accent|="teal"] time, *:root:root[data-colour-accent|="teal"] u, *:root:root[data-colour-accent|="teal"] *.colour-accent {
+    color: #49cfa2;
+}
+
+*:root:root[data-colour-accent|="cyan-light"] dfn, *:root:root[data-colour-accent|="cyan-light"] time, *:root:root[data-colour-accent|="cyan-light"] u, *:root:root[data-colour-accent|="cyan-light"] *.colour-accent {
+    color: #bfe7f2;
+}
+
+*:root:root[data-colour-accent|="blue-light"] dfn, *:root:root[data-colour-accent|="blue-light"] time, *:root:root[data-colour-accent|="blue-light"] u, *:root:root[data-colour-accent|="blue-light"] *.colour-accent {
+    color: #d0d1f6;
+}
+
+*:root:root[data-colour-accent|="purple-light"] dfn, *:root:root[data-colour-accent|="purple-light"] time, *:root:root[data-colour-accent|="purple-light"] u, *:root:root[data-colour-accent|="purple-light"] *.colour-accent {
+    color: #eabdff;
+}
+
+*:root:root[data-colour-accent|="magenta-light"] dfn, *:root:root[data-colour-accent|="magenta-light"] time, *:root:root[data-colour-accent|="magenta-light"] u, *:root:root[data-colour-accent|="magenta-light"] *.colour-accent {
+    color: #f0b2d8;
+}
+
+*:root:root[data-colour-accent|="red-light"] dfn, *:root:root[data-colour-accent|="red-light"] time, *:root:root[data-colour-accent|="red-light"] u, *:root:root[data-colour-accent|="red-light"] *.colour-accent {
+    color: #f9a59b;
+}
+
+*:root:root[data-colour-accent|="yellow-light"] dfn, *:root:root[data-colour-accent|="yellow-light"] time, *:root:root[data-colour-accent|="yellow-light"] u, *:root:root[data-colour-accent|="yellow-light"] *.colour-accent {
+    color: #fcf0be;
+}
+
+*:root:root[data-colour-accent|="green-light"] dfn, *:root:root[data-colour-accent|="green-light"] time, *:root:root[data-colour-accent|="green-light"] u, *:root:root[data-colour-accent|="green-light"] *.colour-accent {
+    color: #d5fcbb;
+}
+
+*:root:root[data-colour-accent|="teal-light"] dfn, *:root:root[data-colour-accent|="teal-light"] time, *:root:root[data-colour-accent|="teal-light"] u, *:root:root[data-colour-accent|="teal-light"] *.colour-accent {
+    color: #bdf0df;
+}
+
+*:root:root[data-colour-accent|="cyan-dark"] dfn, *:root:root[data-colour-accent|="cyan-dark"] time, *:root:root[data-colour-accent|="cyan-dark"] u, *:root:root[data-colour-accent|="cyan-dark"] *.colour-accent {
+    color: #00495c;
+}
+
+*:root:root[data-colour-accent|="blue-dark"] dfn, *:root:root[data-colour-accent|="blue-dark"] time, *:root:root[data-colour-accent|="blue-dark"] u, *:root:root[data-colour-accent|="blue-dark"] *.colour-accent {
+    color: #383966;
+}
+
+*:root:root[data-colour-accent|="purple-dark"] dfn, *:root:root[data-colour-accent|="purple-dark"] time, *:root:root[data-colour-accent|="purple-dark"] u, *:root:root[data-colour-accent|="purple-dark"] *.colour-accent {
+    color: #4c3159;
+}
+
+*:root:root[data-colour-accent|="magenta-dark"] dfn, *:root:root[data-colour-accent|="magenta-dark"] time, *:root:root[data-colour-accent|="magenta-dark"] u, *:root:root[data-colour-accent|="magenta-dark"] *.colour-accent {
+    color: #592846;
+}
+
+*:root:root[data-colour-accent|="red-dark"] dfn, *:root:root[data-colour-accent|="red-dark"] time, *:root:root[data-colour-accent|="red-dark"] u, *:root:root[data-colour-accent|="red-dark"] *.colour-accent {
+    color: #5d2721;
+}
+
+*:root:root[data-colour-accent|="yellow-dark"] dfn, *:root:root[data-colour-accent|="yellow-dark"] time, *:root:root[data-colour-accent|="yellow-dark"] u, *:root:root[data-colour-accent|="yellow-dark"] *.colour-accent {
+    color: #4f420d;
+}
+
+*:root:root[data-colour-accent|="green-dark"] dfn, *:root:root[data-colour-accent|="green-dark"] time, *:root:root[data-colour-accent|="green-dark"] u, *:root:root[data-colour-accent|="green-dark"] *.colour-accent {
+    color: #1f4505;
+}
+
+*:root:root[data-colour-accent|="teal-dark"] dfn, *:root:root[data-colour-accent|="teal-dark"] time, *:root:root[data-colour-accent|="teal-dark"] u, *:root:root[data-colour-accent|="teal-dark"] *.colour-accent {
+    color: #1c4b3b;
+}
+
+*:root:root[data-colour-accent|="white"] dfn, *:root:root[data-colour-accent|="white"] time, *:root:root[data-colour-accent|="white"] u, *:root:root[data-colour-accent|="white"] *.colour-accent {
+    color: #f5f5f5;
+}
+
+*:root:root[data-colour-accent|="bright"] dfn, *:root:root[data-colour-accent|="bright"] time, *:root:root[data-colour-accent|="bright"] u, *:root:root[data-colour-accent|="bright"] *.colour-accent {
+    color: #cccccc;
+}
+
+*:root:root[data-colour-accent|="light"] dfn, *:root:root[data-colour-accent|="light"] time, *:root:root[data-colour-accent|="light"] u, *:root:root[data-colour-accent|="light"] *.colour-accent {
+    color: #a3a3a3;
+}
+
+*:root:root[data-colour-accent|="medium"] dfn, *:root:root[data-colour-accent|="medium"] time, *:root:root[data-colour-accent|="medium"] u, *:root:root[data-colour-accent|="medium"] *.colour-accent {
+    color: #828282;
+}
+
+*:root:root[data-colour-accent|="regular"] dfn, *:root:root[data-colour-accent|="regular"] time, *:root:root[data-colour-accent|="regular"] u, *:root:root[data-colour-accent|="regular"] *.colour-accent {
+    color: #636363;
+}
+
+*:root:root[data-colour-accent|="dark"] dfn, *:root:root[data-colour-accent|="dark"] time, *:root:root[data-colour-accent|="dark"] u, *:root:root[data-colour-accent|="dark"] *.colour-accent {
+    color: #3b3b3b;
+}
+
+*:root:root[data-colour-accent|="dim"] dfn, *:root:root[data-colour-accent|="dim"] time, *:root:root[data-colour-accent|="dim"] u, *:root:root[data-colour-accent|="dim"] *.colour-accent {
+    color: #1c1c1c;
+}
+
+*:root:root[data-colour-accent|="black"] dfn, *:root:root[data-colour-accent|="black"] time, *:root:root[data-colour-accent|="black"] u, *:root:root[data-colour-accent|="black"] *.colour-accent {
+    color: #0c0c0c;
+}
+
+*:root:root[data-colour-accent|="transparent"] dfn, *:root:root[data-colour-accent|="transparent"] time, *:root:root[data-colour-accent|="transparent"] u, *:root:root[data-colour-accent|="transparent"] *.colour-accent {
+    color: transparent;
+}
+
+*:root:root[data-colour-accent|="inherit"] dfn, *:root:root[data-colour-accent|="inherit"] time, *:root:root[data-colour-accent|="inherit"] u, *:root:root[data-colour-accent|="inherit"] *.colour-accent {
+    color: inherit;
+}
+
 /*  BASIC COLOURING  */
 
 *:root:root:root *[data-colour|="cyan"] {
@@ -655,9 +793,9 @@ a[href]:hover {
     background-color: #cccccc;
 }
 
-*:root[data-colour|="bright"] *.colour-accent,
+*:root[data-colour|="bright"] dfn, *:root[data-colour|="bright"] time, *:root[data-colour|="bright"] u, *:root[data-colour|="bright"] *.colour-accent,
 *:root[data-colour|="bright"] code, *:root[data-colour|="bright"] pre, *:root[data-colour|="bright"] *.colour-code,
-*:root[data-colour|="bright"] b, *:root[data-colour|="bright"] cite, *:root[data-colour|="bright"] em, *:root[data-colour|="bright"] i, *:root[data-colour|="bright"] time, *:root[data-colour|="bright"] u, *:root[data-colour|="bright"] *.colour-emphasis,
+*:root[data-colour|="bright"] b, *:root[data-colour|="bright"] cite, *:root[data-colour|="bright"] em, *:root[data-colour|="bright"] i, *:root[data-colour|="bright"] time, *:root[data-colour|="bright"] *.colour-emphasis,
 *:root[data-colour|="bright"] caption, *:root[data-colour|="bright"] h1, *:root[data-colour|="bright"] h2, *:root[data-colour|="bright"] h3, *:root[data-colour|="bright"] h4, *:root[data-colour|="bright"] h5, *:root[data-colour|="bright"] h6, *:root[data-colour|="bright"] header, *:root[data-colour|="bright"] th, *:root[data-colour|="bright"] thead, *:root[data-colour|="bright"] *.colour-heading,
 *:root[data-colour|="bright"] a[href], *:root[data-colour|="bright"] *.colour-link,
 *:root[data-colour|="bright"] strong, *:root[data-colour|="bright"] *.colour-strong {
@@ -681,8 +819,8 @@ a[href]:hover {
     color: #f5f5f5;
 }
 
-*:root[data-colour|="light"] *.colour-accent,
-*:root[data-colour|="light"] b, *:root[data-colour|="light"] cite, *:root[data-colour|="light"] em, *:root[data-colour|="light"] i, *:root[data-colour|="light"] time, *:root[data-colour|="light"] u, *:root[data-colour|="light"] *.colour-emphasis,
+*:root[data-colour|="light"] dfn, *:root[data-colour|="light"] time, *:root[data-colour|="light"] u, *:root[data-colour|="light"] *.colour-accent,
+*:root[data-colour|="light"] b, *:root[data-colour|="light"] cite, *:root[data-colour|="light"] em, *:root[data-colour|="light"] i, *:root[data-colour|="light"] *.colour-emphasis,
 *:root[data-colour|="light"] caption, *:root[data-colour|="light"] h1, *:root[data-colour|="light"] h2, *:root[data-colour|="light"] h3, *:root[data-colour|="light"] h4, *:root[data-colour|="light"] h5, *:root[data-colour|="light"] h6, *:root[data-colour|="light"] header, *:root[data-colour|="light"] th, *:root[data-colour|="light"] thead, *:root[data-colour|="light"] *.colour-heading,
 *:root[data-colour|="light"] a[href], *:root[data-colour|="light"] *.colour-link {
     color: #cccccc;
@@ -708,8 +846,8 @@ a[href]:hover {
     color: #cccccc;
 }
 
-*:root[data-colour|="medium"] *.colour-accent,
-*:root[data-colour|="medium"] b, *:root[data-colour|="medium"] cite, *:root[data-colour|="medium"] em, *:root[data-colour|="medium"] i, *:root[data-colour|="medium"] time, *:root[data-colour|="medium"] u, *:root[data-colour|="medium"] *.colour-emphasis,
+*:root[data-colour|="medium"] dfn, *:root[data-colour|="medium"] time, *:root[data-colour|="medium"] u, *:root[data-colour|="medium"] *.colour-accent,
+*:root[data-colour|="medium"] b, *:root[data-colour|="medium"] cite, *:root[data-colour|="medium"] em, *:root[data-colour|="medium"] i, *:root[data-colour|="medium"] *.colour-emphasis,
 *:root[data-colour|="medium"] caption, *:root[data-colour|="medium"] h1, *:root[data-colour|="medium"] h2, *:root[data-colour|="medium"] h3, *:root[data-colour|="medium"] h4, *:root[data-colour|="medium"] h5, *:root[data-colour|="medium"] h6, *:root[data-colour|="medium"] header, *:root[data-colour|="medium"] th, *:root[data-colour|="medium"] thead, *:root[data-colour|="medium"] *.colour-heading,
 *:root[data-colour|="medium"] a[href], *:root[data-colour|="medium"] *.colour-link {
     color: #a3a3a3;
@@ -735,8 +873,8 @@ a[href]:hover {
     color: #1c1c1c;
 }
 
-*:root[data-colour|="regular"] *.colour-accent,
-*:root[data-colour|="regular"] b, *:root[data-colour|="regular"] cite, *:root[data-colour|="regular"] em, *:root[data-colour|="regular"] i, *:root[data-colour|="regular"] time, *:root[data-colour|="regular"] u, *:root[data-colour|="regular"] *.colour-emphasis,
+*:root[data-colour|="regular"] dfn, *:root[data-colour|="regular"] time, *:root[data-colour|="regular"] u, *:root[data-colour|="regular"] *.colour-accent,
+*:root[data-colour|="regular"] b, *:root[data-colour|="regular"] cite, *:root[data-colour|="regular"] em, *:root[data-colour|="regular"] i, *:root[data-colour|="regular"] *.colour-emphasis,
 *:root[data-colour|="regular"] caption, *:root[data-colour|="regular"] h1, *:root[data-colour|="regular"] h2, *:root[data-colour|="regular"] h3, *:root[data-colour|="regular"] h4, *:root[data-colour|="regular"] h5, *:root[data-colour|="regular"] h6, *:root[data-colour|="regular"] header, *:root[data-colour|="regular"] th, *:root[data-colour|="regular"] thead, *:root[data-colour|="regular"] *.colour-heading,
 *:root[data-colour|="regular"] a[href], *:root[data-colour|="regular"] *.colour-link {
     color: #3b3b3b;
@@ -759,8 +897,8 @@ a[href]:hover {
     color: #0c0c0c;
 }
 
-*:root[data-colour|="dark"] *.colour-accent,
-*:root[data-colour|="dark"] b, *:root[data-colour|="dark"] cite, *:root[data-colour|="dark"] em, *:root[data-colour|="dark"] i, *:root[data-colour|="dark"] time, *:root[data-colour|="dark"] u, *:root[data-colour|="dark"] *.colour-emphasis,
+*:root[data-colour|="dark"] dfn, *:root[data-colour|="dark"] time, *:root[data-colour|="dark"] u, *:root[data-colour|="dark"] *.colour-accent,
+*:root[data-colour|="dark"] b, *:root[data-colour|="dark"] cite, *:root[data-colour|="dark"] em, *:root[data-colour|="dark"] i, *:root[data-colour|="dark"] *.colour-emphasis,
 *:root[data-colour|="dark"] caption, *:root[data-colour|="dark"] h1, *:root[data-colour|="dark"] h2, *:root[data-colour|="dark"] h3, *:root[data-colour|="dark"] h4, *:root[data-colour|="dark"] h5, *:root[data-colour|="dark"] h6, *:root[data-colour|="dark"] header, *:root[data-colour|="dark"] th, *:root[data-colour|="dark"] thead, *:root[data-colour|="dark"] *.colour-heading,
 *:root[data-colour|="dark"] a[href], *:root[data-colour|="dark"] *.colour-link {
     color: #1c1c1c;
@@ -778,9 +916,9 @@ a[href]:hover {
     background-color: #1c1c1c;
 }
 
-*:root[data-colour|="dim"] *.colour-accent,
+*:root[data-colour|="dim"] dfn, *:root[data-colour|="dim"] time, *:root[data-colour|="dim"] u, *:root[data-colour|="dim"] *.colour-accent,
 *:root[data-colour|="dim"] code, *:root[data-colour|="dim"] pre, *:root[data-colour|="dim"] *.colour-code,
-*:root[data-colour|="dim"] b, *:root[data-colour|="dim"] cite, *:root[data-colour|="dim"] em, *:root[data-colour|="dim"] i, *:root[data-colour|="dim"] time, *:root[data-colour|="dim"] u, *:root[data-colour|="dim"] *.colour-emphasis,
+*:root[data-colour|="dim"] b, *:root[data-colour|="dim"] cite, *:root[data-colour|="dim"] em, *:root[data-colour|="dim"] i, *:root[data-colour|="dim"] *.colour-emphasis,
 *:root[data-colour|="dim"] caption, *:root[data-colour|="dim"] h1, *:root[data-colour|="dim"] h2, *:root[data-colour|="dim"] h3, *:root[data-colour|="dim"] h4, *:root[data-colour|="dim"] h5, *:root[data-colour|="dim"] h6, *:root[data-colour|="dim"] header, *:root[data-colour|="dim"] th, *:root[data-colour|="dim"] thead, *:root[data-colour|="dim"] *.colour-heading,
 *:root[data-colour|="dim"] a[href], *:root[data-colour|="dim"] *.colour-link,
 *:root[data-colour|="dim"] strong, *:root[data-colour|="dim"] *.colour-strong {
